fixed margins for chart so not overlapping with figcaptions

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body {
 }
 
 canvas {
+  margin-top: 50px;
   border: 2px solid blue;
   background-color: white;
 }
